Fri Dec  3 20:06:37 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:

	  Changed to call ACE_WITH_SSL instead of explicitly setting
	  BUILD_SLL false.

Fri Dec  3 18:32:19 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/Makefile.am:

	  Update to account for recent ObjRefTemplate changes.

Sat Dec  4 00:17:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IIOP_Endpoint.cpp:
	* tao/Strategies/SCIOP_Endpoint.cpp

	  Fixed a logic error while trying to parse the string passed in
	  for PreferredInterfaces option. The parsing introduced a loop
	  for endpoints created which were not part of the "destination"
	  in the ORBPreferredInterface option. Thanks to Theckla Louchios
	  <theckla.louchois@lmco.com> for reporting the problem.

Fri Dec  3 11:34:37 2004  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.h:
        * orbsvcs/orbsvcs/Notify/Admin.cpp:
        * orbsvcs/orbsvcs/Notify/EventChannel.h:
        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.h:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/ProxySupplier.h:
        * orbsvcs/orbsvcs/Notify/ProxySupplier.cpp:
        * orbsvcs/orbsvcs/Notify/Topology_Object.h:
        * orbsvcs/orbsvcs/Notify/Topology_Object.cpp:
          To the extent possible:
          Avoid overloading the init method name -- use
          other names.
          Make the init method(s) non-virtual.
          AFAIK the only one "questionable" usage is:
          TAO_Notify_Supplier_Admin and TAO_Notify_Consumer_Admin
          override the non-virtual init method in TAO_Notify_Admin.

Fri Dec  3 09:20:38 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/Logging_Service/Notify_Logging_Service/Makefile.am:

          Updated.

        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
          Removed unnecessary/unused #include "tao/IORTable/IORTable.h".
