@@ -1,8 +1,8 @@
-#include "orbsvcs/orbsvcs/Log/LogRecordStore_persist.h"
+#include "orbsvcs/Log/LogRecordStore_persist.h"
 
-#include "orbsvcs/orbsvcs/Time_Utilities.h"
-#include "orbsvcs/orbsvcs/Log/Log_Constraint_Interpreter.h"
-#include "orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.h"
+#include "orbsvcs/Time_Utilities.h"
+#include "orbsvcs/Log/Log_Constraint_Interpreter.h"
+#include "orbsvcs/Log/Log_Constraint_Visitors.h"
 #include "ace/OS_NS_sys_time.h"
 
 ACE_RCSID (Log,
